<resources>
    <string name="app_name">CashCarp</string>
    <string name="texto_boton_saltar">Saltar</string>
    <string name="texto_boton_volver">Volver</string>
    <string name="texto_boton_siguiente">Siguiente</string>
    <string name="titulo_tutorial_1">Es la hora de que empieces a ahorrar</string>
    <string name="titulo_tutorial_2">Tu balance a un solo toque</string>
    <string name="titulo_tutorial_3">Analiza tus gastos de un vistazo</string>
    <string name="descripcion_tutorial_1">Crea tus gastos e ingresos pulsando el icono + en la mitad de la barra de herramientas situada en la base de la pantalla</string>
    <string name="descripcion_tutorial_2">Puedes ver tus gastos o ingresos pulsando en cualquiera de los respectivos iconos situados arriba.</string>
    <string name="descripcion_tutorial_3">Cashcarp analiza tus gastos e ingresos y hace gráficas para que puedas ver fácilmente cuanto y como gastas el dinero.</string>
    <string name="createAcountTitleText">Crea tu cuenta ahora</string>
    <string name="emailTextBox">Email</string>
    <string name="apodoTexto">Apodo</string>
    <string name="emailLabel">Email:</string>
    <string name="emailFieldText">Introduce tu email</string>
    <string name="contrasenaLabel">Contraseña:</string>
    <string name="contrasenaTextField">Introduce tu contraseña</string>
    <string name="apodoLabel">Apodo:</string>
    <string name="apodoTextField">Introduce tu apodo</string>
    <string name="presupuestoLabel">Presupuesto:</string>
    <string name="presupuestoTextLabel">Introduce tu presupuesto</string>
    <string name="crearCuentaBotonTexto">Crear cuenta</string>
    <string name="yaTengoCuentaBotonTexto">Ya tengo una cuenta</string>
    <string name="InicarSesionTitleText">Inicia sesión</string>
    <string name="textoBotonInicarSesion">Iniciar Sesion</string>
    <string name="buttonTextNoTengoCuenta">No tengo cuenta</string>
    <string name="home_text_navbar">Principal</string>
    <string name="spends_text_navbar">Gastos</string>
    <string name="add_text_navbar">Crear</string>
    <string name="incomes_text_navbar">Ingresos</string>
    <string name="settings_text_navbar">Ajustes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="holaTextPantPrin">Hola:</string>
    <string name="nombreuserTextPantPrin">nombreUser</string>
    <string name="holaText">Hola:</string>
    <string name="userNamePantPrin">userText</string>
    <string name="has_gastado_text">Has gastado</string>
    <string name="este_mes_text">este mes</string>
    <string name="has_recibido_text">Has recibido</string>
    <string name="te_quedan_text">Te quedan</string>
    <string name="no_hay_ningun_gasto_ni_ingreso_text">no hay ningun gasto ni ingreso</string>
    <string name="crear_gasto_ingreso_text_crear_pant">Crear gasto/ingreso</string>
    <string name="descripcion_text_crear_pant">Descripción</string>
    <string name="cantidad_text_crear_pant">Cantidad</string>
    <string name="gasto_ingreso_text_crear_pant">Gasto / Ingreso</string>
    <string name="tipo_text_crear_pant">Tipo</string>
    <string name="crear_tipo_btn_text">Crear tipo</string>
    <string name="save_text_btn">Guardar</string>
    <string name="tipo_gasto_tipo_ingreso_text">Tipo Gasto/ Tipo Ingreso</string>
    <string name="nombre_text">Nombre</string>
    <string name="color_text">Color</string>
    <string name="crear_tipo_text">Crear tipo</string>
    <string name="seleccionar_color_btn_text">Seleccionar color</string>
    <string name="gastos_text">Gastos</string>
    <string name="description_text">Descripción:</string>
    <string name="cantidad_label">Cantidad:</string>
    <string name="fecha_lablel">Fecha:</string>
    <string name="editar_gasto_text">Editar gasto</string>
    <string name="editar_btn_text">Editar</string>
    <string name="borrar_btn_text">Borrar</string>
    <string name="ingresos_text">Ingresos</string>
    <string name="editar_ingreso_text">Editar ingreso</string>
    <string name="ajustes_text">Ajustes</string>
    <string name="activar_tutorial_text">Activar tutorial</string>
    <string name="cambiar_presupuesto_text">Cambiar presupuesto</string>
    <string name="actualizar_text">Actualizar</string>
    <string name="habilitar_grafico_text">Alternar gáfica gastos/ingresos\n</string>
</resources>